--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 <tr>
 <td style="text-align: left"><strong>CartPole-v0</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/73">5.305995</a></td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/78">5.658951</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -921,10 +921,10 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 </thead><tbody>
 <tr>
 <td style="text-align: left">CartPole-v0</td>
-<td style="text-align: left">5.305995</td>
-<td style="text-align: left">14</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/78">5.658951</a></td>
+<td style="text-align: left">7</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/73">dqn</a></td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/78">double_dqn</a></td>
 </tr>
 <tr>
 <td style="text-align: left">CartPole-v1</td>
