publish: add link to sol PRs
generated from commit b1eb0ad7e550dfffa9f8a6ccd0be679200d0f7e3

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 
 <h2 id="solution-matrix">Solution Matrix</h2>
 
-<p>A matrix of the best <code class="prettyprint">fitness_score</code> of <strong>Algorithms</strong> v.s. <strong>Problems</strong></p>
+<p>A matrix of the best <code class="prettyprint">fitness_score</code> of <strong>Algorithms</strong> v.s. <strong>Problems</strong>. The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
 
 <table><thead>
 <tr>
@@ -906,7 +906,7 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 
 <h2 id="problems">Problems</h2>
 
-<p>The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed"><code class="prettyprint">solution</code> PRs</a></p>
+<p>The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed">solution PRs</a></p>
 
 <h3 id="classic-problems">Classic Problems</h3>
 
