publish: remove useless lang tab
generated from commit af922a3d557ccbacdff359c6457d2ca8059ff25d

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;python&quot;]">
+  <body class="index" data-languages="[]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -186,9 +186,6 @@
     </a>
     <div class="tocify-wrapper">
       <img src="images/logo.png" alt="Logo" />
-        <div class="lang-selector">
-              <a href="#" data-language-name="python">python</a>
-        </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
@@ -1386,9 +1383,6 @@ return ideal_fitness_score
 
       </div>
       <div class="dark-box">
-          <div class="lang-selector">
-                <a href="#" data-language-name="python">python</a>
-          </div>
       </div>
     </div>
   </body>
