publish: add new cartpole-v1 solution
generated from commit dbf3f6998dd43ab6de6182c65b9615fc07063640

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ return ideal_fitness_score
 <tr>
 <td style="text-align: left"><strong>CartPole-v1</strong></td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/80">7.678957</a></td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/82">9.089594</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1084,10 +1084,10 @@ return ideal_fitness_score
 </tr>
 <tr>
 <td style="text-align: left">CartPole-v1</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/80">7.678957</a></td>
-<td style="text-align: left">55</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/82">9.089594</a></td>
+<td style="text-align: left">16</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">dqn_v1</td>
+<td style="text-align: left">double_dqn_v1</td>
 </tr>
 <tr>
 <td style="text-align: left">Acrobot-v1</td>
