--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <h2 id="currently-implemented-algorithms">Currently implemented algorithms</h2>
 
-<h3 id="q-learning">Q-Learning</h3>
+<p><strong>Q-Learning</strong></p>
 
 <p>Q-learning algorithms attempt to estimate the optimal Q function, i.e thevalue of taking action A in state S under a specific policy. Q-learning algorithms have an implicit policy, typically \epsilon-greedy in which the action with the maximum Q value is selected with probability(1 - \epsilon) and a random action is taken with probability \epsilon. The random actions encourage exploration of the state space and help prevent algorithms from getting stuck in local minima. Q-learning algorithms are off-policy algorithms in that the policy used to evaluate the value of the action taken is different to the policy used to determine which state-action pairs are visited. It is also a temporal difference algorithm. Updates  to the Q function are based on existing estimates. The estimate in time t is updated using an estimate from time t+1. This allows Q-Learning algorithms to be online and incremental, so the agent can be trained during an episode. The update to Q_t(S, A) is as follows</p>
 
@@ -976,9 +976,8 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <p>Since the policy that is used to evaluate the target is fixed (a greedy policy that selects the action that maximises the Q-value for a particular state) and is different to the policy used to determine which state-action pairs are being visited, it is possible to use experience replay to train an agent. This is often needed to Agents act in environments to get experiences. Experiences consist of the state, the action taken, the next state, and the reward, and are denoted as <S_t, A_t, R_{t+1}, S_{t+1}>. These experiences are stored in the agents memory. Periodically during an episode the agent is trained. During training n batches of size m are selected from memory and the Q update step is performed. This is different to Sarsa algorithms which are on-policy and agents are trained after each experience using only the most recent experience.</p>
 
-<h4 id="deep-q-learning">Deep Q-Learning:</h4>
-
-<p>Standard Q-learning algorithm with experience replay. Online training every n experiences.</p>
+<p><strong>Deep Q-Learning</strong>
+Standard Q-learning algorithm with experience replay. Online training every n experiences.</p>
 
 <p>Q update:
 $$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
@@ -993,9 +992,8 @@ Target (y vals):  [R + \gamma max_a Q(S&rsquo;, A)]</p>
 - DQN: function approximator - feedforward neural network
 - ConvDQN:  function approximator - convolutional network</p>
 
-<h4 id="double-q-learning">Double Q-Learning:</h4>
-
-<p>Q-learning algorithm with two Q function approximators to address the maximisation bias problem, Q_1, and Q_2. One Q function is used to select the action in the next state, S&rsquo;, the other is used to evaluate the action in state S&rsquo;. Periodically the roles of each Q function are switched. Online training every n experiences.</p>
+<p><strong>Double Q-Learning</strong>
+Q-learning algorithm with two Q function approximators to address the maximisation bias problem, Q_1, and Q_2. One Q function is used to select the action in the next state, S&rsquo;, the other is used to evaluate the action in state S&rsquo;. Periodically the roles of each Q function are switched. Online training every n experiences.</p>
 
 <p>Q update(alternate between 1 and 2)
 1. $ Q_1(S, A) \Leftarrow Q_1(S, A) + \alpha [R + \gamma Q_2(S&rsquo;, argmax_A Q_1(S&rsquo;, A)) - Q1(S, A)] $
@@ -1011,9 +1009,8 @@ Target (y vals):  [R + \gamma Q_1(S&rsquo;, argmax_A Q_2(S&rsquo;, A))] or [R + 
 - DoubleDQN: function approximator - feedforward neural network
 - DoubleConvQN:  function approximator - convolutional network</p>
 
-<h4 id="deep-q-learning-with-weight-freezing">Deep Q-Learning with weight freezing:</h4>
-
-<p>Deep Q-Learning algorithms tends to be unstable. To address this issue, create two Q function approximators, one for exploration, Q_e, and one for evaluating the target, Q_t. The target is a copy of the exploration network with frozen weights which lag the exploration network. These weights are updated periodically to match the exploration network. Freezing the target network weights help avoids oscillations in the policy, where slight changes to Q-values can lead to significant changes in the policy, and helps break correlations between the Q-network and the target. See <a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Resources_files/deep_rl.pdf">David Silver&rsquo;s</a> lecture slides for more details. Online training every n experiences.</p>
+<p><strong>Deep Q-Learning with weight freezing</strong>
+Deep Q-Learning algorithms tends to be unstable. To address this issue, create two Q function approximators, one for exploration, Q_e, and one for evaluating the target, Q_t. The target is a copy of the exploration network with frozen weights which lag the exploration network. These weights are updated periodically to match the exploration network. Freezing the target network weights help avoids oscillations in the policy, where slight changes to Q-values can lead to significant changes in the policy, and helps break correlations between the Q-network and the target. See <a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Resources_files/deep_rl.pdf">David Silver&rsquo;s</a> lecture slides for more details. Online training every n experiences.</p>
 
 <p>Q update:
 $$Q_e(S, A) \Leftarrow Q_e(S, A) + \alpha [R + \gamma max_A Q_t(S&rsquo;, A) - Q_e(S, A)]$$
@@ -1039,9 +1036,8 @@ $Q(S_t, A_t) \Leftarrow Q(S_t, A_t) + \alpha [R_{t+1} + \gamma Q(S_{t+1}, A_{t+1
 
 <p>This update is made each time the agent acts in an environment and gets an experience <S_t, A_t, R_{t+1}, S_{t+1}></p>
 
-<h4 id="deep-sarsa">Deep Sarsa</h4>
-
-<p>Standard Sarsa algortthm</p>
+<p><strong>Sarsa</strong>
+Standard Sarsa algortthm</p>
 
 <p>Q update (same as Q-Learning):
 $$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
@@ -1055,9 +1051,8 @@ Target (y vals):  [R + \gamma max_a Q(S&rsquo;, A)]</p>
 <p>Agents
 - DeepSarsa: function approximator - feedforward neural network</p>
 
-<h4 id="deep-expected-sarsa">Deep Expected Sarsa</h4>
-
-<p>Uses the expected value of the Q function under the current policy to construct the target instead of the Q-value for the action selected.</p>
+<p><strong>Expected Sarsa</strong>
+Uses the expected value of the Q function under the current policy to construct the target instead of the Q-value for the action selected.</p>
 
 <p>Q update (same and Q-Learning):
 $$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma E_a Q(S&rsquo;, a) - Q(S, A)] $$</p>
@@ -1071,9 +1066,8 @@ Target (y vals):  [R + \gamma E_a Q(S&rsquo;, a)]</p>
 <p>Agents
 - DeepExpectedSarsa: function approximator - feedforward neural network</p>
 
-<h4 id="off-policy-expected-sarsa-experimental">Off Policy Expected Sarsa (experimental):</h4>
-
-<p>Sarsa is typically an on policy algorithm. However, if a different policy is used to evaluate the target than the one used to explore, it becomes and off-policy algorithm.  With this set up, Q-Learning can be understood as a specific instance of Off Policy Expected Sarsa, when the policy used to evaluate the target is the greedy policy.</p>
+<p><strong>Off Policy Expected Sarsa (experimental)</strong>
+Sarsa is typically an on policy algorithm. However, if a different policy is used to evaluate the target than the one used to explore, it becomes and off-policy algorithm.  With this set up, Q-Learning can be understood as a specific instance of Off Policy Expected Sarsa, when the policy used to evaluate the target is the greedy policy.</p>
 
 <p>Q update and translation to neural network update: Same as DQN with fixed epsilon.</p>
 
