--- a/index.html
+++ b/index.html
@@ -976,103 +976,140 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <p>Since the policy that is used to evaluate the target is fixed (a greedy policy that selects the action that maximises the Q-value for a particular state) and is different to the policy used to determine which state-action pairs are being visited, it is possible to use experience replay to train an agent. This is often needed to Agents act in environments to get experiences. Experiences consist of the state, the action taken, the next state, and the reward, and are denoted as <S_t, A_t, R_{t+1}, S_{t+1}>. These experiences are stored in the agents memory. Periodically during an episode the agent is trained. During training n batches of size m are selected from memory and the Q update step is performed. This is different to Sarsa algorithms which are on-policy and agents are trained after each experience using only the most recent experience.</p>
 
-<p><strong>Deep Q-Learning</strong>
-Standard Q-learning algorithm with experience replay. Online training every n experiences.</p>
+<p><strong>Deep Q-Learning</strong></p>
 
-<p>Q update:
-$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
+<p>Standard Q-learning algorithm with experience replay. Online training every n experiences.</p>
 
-<p>Translation to neural network update:
-Learning rate: \alpha
+<p>Q update:</p>
+
+<p>$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
+
+<p>Translation to neural network update:</p>
+
+<p>Learning rate: \alpha
 Input (x vals):  (S, A)
 Network output: Q(S, A)
 Target (y vals):  [R + \gamma max_a Q(S&rsquo;, A)]</p>
 
-<p>Agents: 
-- DQN: function approximator - feedforward neural network
-- ConvDQN:  function approximator - convolutional network</p>
+<p>Agents: </p>
 
-<p><strong>Double Q-Learning</strong>
-Q-learning algorithm with two Q function approximators to address the maximisation bias problem, Q_1, and Q_2. One Q function is used to select the action in the next state, S&rsquo;, the other is used to evaluate the action in state S&rsquo;. Periodically the roles of each Q function are switched. Online training every n experiences.</p>
+<ul>
+<li>DQN: function approximator - feedforward neural network</li>
+<li>ConvDQN:  function approximator - convolutional network</li>
+</ul>
 
-<p>Q update(alternate between 1 and 2)
-1. $ Q_1(S, A) \Leftarrow Q_1(S, A) + \alpha [R + \gamma Q_2(S&rsquo;, argmax_A Q_1(S&rsquo;, A)) - Q1(S, A)] $
-2. $Q_2(S, A) \Leftarrow Q_2(S, A) + \alpha [R + \gamma Q_1(S&rsquo;, argmax_A Q_2(S&rsquo;, A)) - Q2(S, A)] $</p>
+<p><strong>Double Q-Learning</strong></p>
 
-<p>Translation to neural network update:
-Learning rate: \alpha
+<p>Q-learning algorithm with two Q function approximators to address the maximisation bias problem, Q_1, and Q_2. One Q function is used to select the action in the next state, S&rsquo;, the other is used to evaluate the action in state S&rsquo;. Periodically the roles of each Q function are switched. Online training every n experiences.</p>
+
+<p>Q update(alternate between 1 and 2)</p>
+
+<ol>
+<li>$ Q_1(S, A) \Leftarrow Q_1(S, A) + \alpha [R + \gamma Q_2(S&rsquo;, argmax_A Q_1(S&rsquo;, A)) - Q1(S, A)] $</li>
+<li>$Q_2(S, A) \Leftarrow Q_2(S, A) + \alpha [R + \gamma Q_1(S&rsquo;, argmax_A Q_2(S&rsquo;, A)) - Q2(S, A)] $</li>
+</ol>
+
+<p>Translation to neural network update:</p>
+
+<p>Learning rate: \alpha
 Input (x vals):  (S, A)
 Network output: Q_1(S, A) or Q_2(S, A)<br>
 Target (y vals):  [R + \gamma Q_1(S&rsquo;, argmax_A Q_2(S&rsquo;, A))] or [R + \gamma Q_2(S&rsquo;, argmax_A Q_1(S&rsquo;, A))]</p>
 
-<p>Agents
-- DoubleDQN: function approximator - feedforward neural network
-- DoubleConvQN:  function approximator - convolutional network</p>
+<p>Agents</p>
 
-<p><strong>Deep Q-Learning with weight freezing</strong>
-Deep Q-Learning algorithms tends to be unstable. To address this issue, create two Q function approximators, one for exploration, Q_e, and one for evaluating the target, Q_t. The target is a copy of the exploration network with frozen weights which lag the exploration network. These weights are updated periodically to match the exploration network. Freezing the target network weights help avoids oscillations in the policy, where slight changes to Q-values can lead to significant changes in the policy, and helps break correlations between the Q-network and the target. See <a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Resources_files/deep_rl.pdf">David Silver&rsquo;s</a> lecture slides for more details. Online training every n experiences.</p>
+<ul>
+<li>DoubleDQN: function approximator - feedforward neural network</li>
+<li>DoubleConvQN:  function approximator - convolutional network</li>
+</ul>
 
-<p>Q update:
-$$Q_e(S, A) \Leftarrow Q_e(S, A) + \alpha [R + \gamma max_A Q_t(S&rsquo;, A) - Q_e(S, A)]$$
+<p><strong>Deep Q-Learning with weight freezing</strong></p>
+
+<p>Deep Q-Learning algorithms tends to be unstable. To address this issue, create two Q function approximators, one for exploration, Q_e, and one for evaluating the target, Q_t. The target is a copy of the exploration network with frozen weights which lag the exploration network. These weights are updated periodically to match the exploration network. Freezing the target network weights help avoids oscillations in the policy, where slight changes to Q-values can lead to significant changes in the policy, and helps break correlations between the Q-network and the target. See <a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Resources_files/deep_rl.pdf">David Silver&rsquo;s</a> lecture slides for more details. Online training every n experiences.</p>
+
+<p>Q update:</p>
+
+<p>$$Q_e(S, A) \Leftarrow Q_e(S, A) + \alpha [R + \gamma max_A Q_t(S&rsquo;, A) - Q_e(S, A)]$$
 Periodically set $Q_t = Q_e$ (e.g. after every episode) or $Q_t = (1 - \epsilon)Q_t + \epsilon Q_e$</p>
 
-<p>Translation to neural network update:
-Learning rate: \alpha
+<p>Translation to neural network update:</p>
+
+<p>Learning rate: \alpha
 Input (x vals):  $(S, A)$
 Network output: $Q_e(S, A)$
 Target $(y vals):  [R + \gamma max_A Q_t(S&rsquo;, A)]$
-Update is to $$</p>
+Update is to $Q_e$</p>
 
-<p>Agents
-- FreezeDQN: function approximator - feedforward neural network</p>
+<p>Agents</p>
+
+<ul>
+<li>FreezeDQN: function approximator - feedforward neural network</li>
+</ul>
 
 <h3 id="sarsa">Sarsa</h3>
 
 <p>Sarsa algorithms also attempt to estimate the optimal Q function. They are on policy algorithms so the policy used to evaluate the target is the same as to the policy used to determine which state-action pairs are being visited. Like Q-Learning, Sarsa is a temporal difference algorithm. However, since they are on policy, it is trickier to take advantage of experience replay, requiring storage of the action in state t+1 and the Q-value for the state and action selected in t+1 in an experience. In the following implementations, updates are made after each action with the exception of off policy expected Sarsa.</p>
 
-<p>Sarsa update:
-Select $A_{t+1}$ in state $S_{t+1}$ using policy
+<p>Sarsa update:</p>
+
+<p>Select $A_{t+1}$ in state $S_{t+1}$ using policy
 $Q(S_t, A_t) \Leftarrow Q(S_t, A_t) + \alpha [R_{t+1} + \gamma Q(S_{t+1}, A_{t+1}) - Q(S_t, A)]$</p>
 
 <p>This update is made each time the agent acts in an environment and gets an experience <S_t, A_t, R_{t+1}, S_{t+1}></p>
 
-<p><strong>Sarsa</strong>
-Standard Sarsa algortthm</p>
+<p><strong>Sarsa</strong></p>
 
-<p>Q update (same as Q-Learning):
-$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
+<p>Standard Sarsa algortthm</p>
 
-<p>Translation to neural network update:
-Learning rate: \alpha
+<p>Q update (same as Q-Learning):</p>
+
+<p>$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma max_a Q(S&rsquo;, A) - Q(S, A)] $$</p>
+
+<p>Translation to neural network update:</p>
+
+<p>Learning rate: \alpha
 Input (x vals):  (S, A)
 Network output: Q(S, A)
 Target (y vals):  [R + \gamma max_a Q(S&rsquo;, A)]</p>
 
-<p>Agents
-- DeepSarsa: function approximator - feedforward neural network</p>
+<p>Agents</p>
 
-<p><strong>Expected Sarsa</strong>
-Uses the expected value of the Q function under the current policy to construct the target instead of the Q-value for the action selected.</p>
+<ul>
+<li>DeepSarsa: function approximator - feedforward neural network</li>
+</ul>
 
-<p>Q update (same and Q-Learning):
-$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma E_a Q(S&rsquo;, a) - Q(S, A)] $$</p>
+<p><strong>Expected Sarsa</strong></p>
 
-<p>Translation to neural network update:
-Learning rate: \alpha
+<p>Uses the expected value of the Q function under the current policy to construct the target instead of the Q-value for the action selected.</p>
+
+<p>Q update (same and Q-Learning):</p>
+
+<p>$$ Q(S, A) \Leftarrow Q(S, A) + \alpha [R + \gamma E_a Q(S&rsquo;, a) - Q(S, A)] $$</p>
+
+<p>Translation to neural network update:</p>
+
+<p>Learning rate: \alpha
 Input (x vals):  (S, A)
 Network output: Q(S, A)
 Target (y vals):  [R + \gamma E_a Q(S&rsquo;, a)]</p>
 
-<p>Agents
-- DeepExpectedSarsa: function approximator - feedforward neural network</p>
+<p>Agents</p>
 
-<p><strong>Off Policy Expected Sarsa (experimental)</strong>
-Sarsa is typically an on policy algorithm. However, if a different policy is used to evaluate the target than the one used to explore, it becomes and off-policy algorithm.  With this set up, Q-Learning can be understood as a specific instance of Off Policy Expected Sarsa, when the policy used to evaluate the target is the greedy policy.</p>
+<ul>
+<li>DeepExpectedSarsa: function approximator - feedforward neural network</li>
+</ul>
+
+<p><strong>Off Policy Expected Sarsa (experimental)</strong></p>
+
+<p>Sarsa is typically an on policy algorithm. However, if a different policy is used to evaluate the target than the one used to explore, it becomes and off-policy algorithm.  With this set up, Q-Learning can be understood as a specific instance of Off Policy Expected Sarsa, when the policy used to evaluate the target is the greedy policy.</p>
 
 <p>Q update and translation to neural network update: Same as DQN with fixed epsilon.</p>
 
-<p>Agents
-- OffPolicySarsa: function approximator - feedforward neural network</p>
+<p>Agents</p>
+
+<ul>
+<li>OffPolicySarsa: function approximator - feedforward neural network</li>
+</ul>
 
 <h3 id="policy-gradient">Policy Gradient</h3>
 
