publish: Updating algorithms intro
generated from commit bef7d918fe7ad76ae5bece71272af2e4e31b1898

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 
           <h1 id="algorithms"><a name="algorithms"></a>Algorithms</h1>
 
-<p>The currently implemented algorithms combine deep neural networks with a number of classic reinforcement learning algorithms. These are just a starting point. Please invent your own! We will also continue to add algorithms over time. </p>
+<p>The currently implemented algorithms combine deep neural networks with a number of classic reinforcement learning algorithms. These are just a starting point. Please invent your own! </p>
 
 <h2 id="what-is-reinforcement-learning">What is reinforcement learning?</h2>
 
@@ -942,8 +942,9 @@ When developing a new algorithm, use the session graph to immediately see how th
 
 <p><em>Most RL research is conducted within the mathematical framework of Markov decision processes (MDPs). MDPs involve a decision-making agent interacting with its environment so as to maximize the cumulative reward it receives over time. The agent perceives aspects of the environment&rsquo;s state and selects actions. The agent may estimate a value function and use it to construct better and better decision-making policies over time.</em></p>
 
-<p><em>RL algorithms are methods for solving this kind of problem, that is, problems involving sequences of decisions in which each decision affects what opportunities are available later, in which the effects need not be deterministic, and in which there are long-term goals. RL methods are intended to address the kind of learning and decision making problems that people and animals face in their normal, everyday lives</em>
-        <em>- Rich Sutton</em></p>
+<p><em>RL algorithms are methods for solving this kind of problem, that is, problems involving sequences of decisions in which each decision affects what opportunities are available later, in which the effects need not be deterministic, and in which there are long-term goals. RL methods are intended to address the kind of learning and decision making problems that people and animals face in their normal, everyday lives</em></p>
+
+<p><em>Rich Sutton</em></p>
 
 <p>For further reading on reinforcement learning see <a href="http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html">David Silver&rsquo;s lectures</a> and the book, Reinforcement Learning: An Introduction, by Sutton and Barto.</p>
 
